--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div id="screen"></div>
