--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>〇△□</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.cdnfonts.com/css/digital-7-mono"
       rel="stylesheet"
