--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="module" src="main.js"></script>
   </head>
   <body>
+    <p id="pressAnywhereText">Press anywhere for sound effects.</p>
     <div id="screen"></div>
   </body>
 </html>
